--- a/index.html
+++ b/index.html
@@ -7,13 +7,29 @@
     </head>
     <body>
         <h1 class="title">Harvard Art Museums</h1>
+        </div>
         <div id="all-galleries">
             <h2>Galleries</h2>
             <ul id="galleries">
             </ul>
         </div>
         <div id="all-objects" style="display:none">
-            <h2>Objects: TODO</h2>
+            <h2>Objects</h2>
+            <table id="objects">
+                <tr>
+                    <th>Title</th>
+                    <th>People</th>
+                    <th>Image</th>
+                    <th>Link</th>
+                </tr>
+                
+            </table> 
+            </ul>
+        </div>
+        
+        <div id="object-details" style="display:none">
+            <button id="button" onclick="goBack()"> Back</button>
+
         </div>
     </body>
 </html>
