--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
     <body>
         <h1 class="title">Harvard Art Museums</h1>
         </div>
+        <!-- Div that shows the list of all the galleries-->
         <div id="all-galleries">
             <h2>Galleries</h2>
             <ul id="galleries">
             </ul>
         </div>
+        <!-- Div that shows all the objects of a particular gallery-->
         <div id="all-objects" style="display:none">
             <h2>Objects</h2>
+            <button id= button2 onclick="backToGalleries()"> Back to Galleries</button>
             <table id="objects">
                 <tr>
                     <th>Title</th>
@@ -22,14 +25,11 @@
                     <th>Image</th>
                     <th>Link</th>
                 </tr>
-                
-            </table> 
-            </ul>
+            </table>
         </div>
-        
+        <!-- Div that shows details of one specific object-->
         <div id="object-details" style="display:none">
-            <button id="button" onclick="goBack()"> Back</button>
-
+            <button id="button" onclick="goBack()">Back</button>
         </div>
     </body>
 </html>
