--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
         <!-- Div that shows details of one specific object-->
         <div id="object-details" style="display:none">
-            <button id="button" onclick="goBack()">Back</button>
+            <button id="button" onclick="goBack()">Back to Objects</button>
         </div>
     </body>
 </html>
