--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Harvard Art Museums Galleries</title>
         <link href="styles.css" rel="stylesheet" />
         <script src="index.js"></script>
+        <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     </head>
     <body>
         <h1 class="title">Harvard Art Museums</h1>
